--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
+    "firebase": "^8.0.1",
     "react": "^17.0.1",
     "react-columns": "^1.2.1",
     "react-dom": "^17.0.1",
+    "react-firebase": "^2.2.8",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
