--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bip39js": "^1.0.1",
     "bootstrap": "^4.5.3",
+    "crypto-js": "^4.0.0",
+    "dotenv": "^8.2.0",
+    "ethereumjs-tx": "^2.1.2",
+    "ethers": "^5.0.19",
+    "firebase": "^8.0.0",
+    "pify": "^5.0.0",
     "react": "^17.0.1",
     "react-columns": "^1.2.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "web3": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
